Swithcing to PC

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,7 +60,8 @@
         </div>
     </nav>
     <div class="wrapper">
-        <div class="header header-filter" style="background-image: url('https://images.unsplash.com/photo-1423655156442-ccc11daa4e99');">
+        <div class="header header-filter" style="background-image: url('https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1450');">
+        </div>
         <div class="main main-raised">
             <div class="section">
                 <div class="container-fluid">
@@ -85,7 +86,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
 </body>
