Swithcing to PC

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -801,7 +801,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
 </p>
 <p class="text-justify">
     Pojďme se podívat, jak si lze vcelku jednoduše pamatovat čísla.
-    <strong>
+    <strong><br/>
     0 - s,z,c<br/>
     1 - t,t´,d,h<br/>
     2 - n<br/>
