Swithcing to PC

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,7 +74,7 @@
                               <li><a href="#sec1">Section 1</a></li>
                               <li><a href="#sec2">Section 2</a></li>
                               <li><a href="#sec3">Section 3</a></li>
-                              <li><a href="#sec-conclusion">Section 4</a></li>
+                              <li class="fixer"><a href="#sec-conclusion">Section 4</a></li>
                             </ul>
                           </div>
                       </div>
