--- a/app/static/css/bootstrap.css
+++ b/app/static/css/bootstrap.css
@@ -11,8 +11,13 @@ html {
 }
 body {
   margin: 0;
+  margin-top: 40px;
 }
 article,
+fixer {
+    padding-top: 60px;
+    margin-top: -40px;
+},
 aside,
 details,
 figcaption,
@@ -23,7 +28,7 @@ hgroup,
 main,
 menu,
 nav,
-section {padding-top:60px},
+section {padding-top:60px;},
 summary {
   display: block;
 }
