--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-success navbar-fixed-top navbar-hijtec" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-doc">
