--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,7 @@
     <div class="wrapper">
         <div class="header header-filter" style="background-image: url('https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1450');">
         </div>
-        <div class="main main-raised" data-spy="scroll" data-target="#myScrollspy">
+        <div class="main main-raised">
             <div class="section">
                 <div class="container-fluid">
                     <div class="row-fluid">
@@ -82,7 +82,7 @@
                       </div>
                       <!--/left-->
                       <!--right-->
-                      <div class="col-md-8 col-md-offset-1">
+                      <div class="col-md-8 col-md-offset-1" data-spy="scroll" data-target="#myScrollspy">
                       {% block content %}{% endblock %}
                       </div>
                     </div>
