--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -838,6 +838,75 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Můžete si i vymyslet vlastní list od 1 do sta, který může dále sloužit jako
     další list pro vaši paměť.
 </p>
+<h1 id="sec5">
+    5. Mind mapping
+</h1>
+<p class="text-justify">
+    Jak jste si mohli v průběhu článku všimnout, naší paměti se nejlépe pamatují
+    zrakové vjemy. Každou informaci lze nahradit kresbou, malbou, fotografií či
+    sochou. Vytvořte si svá vlastní umělecká díla pro zapamatování si důležitých
+    věcí. Proto existují již osvědčené metody, jako je například Mind mapping.
+</p>
+<p class="text-justify">
+    Co potřebujete pro tuto metodu? Mysl, papír na šířku, barevné pastelky či fixy.
+    Použijte asociace, omezte se na maximálně dvousloví. Tyto mapy se dají velmi
+    dobře použít na shrnutí či jako vodítko pro debatu či téma
+</p>
+<h1 id="sec6">
+    6. Metody života
+</h1>
+<h2>
+    6.1 Slovo od slova
+</h2>
+<p class="text-justify">
+    Pokud si potřebujete zapamatovat nazpaměť citát, báseň či definici, následující
+    rady by vám měli pomoci.<br/>
+    Zaprvé z textu vyberte klíčová slova, která vystihují jeho podstatu. Následně použijte
+    jakoukoliv již dříve zmíněnou metodu, následně propojte s vaší LTM.<br/>
+    Opakujte, zorientujte se, lépe se vám uvažuje o věcech, kterým rozumíte.
+</p>
+<h2>
+    6.2 Přednášejte zpaměti
+</h2>
+<p class="text-justify">
+    Hodně lidí se bojí, že dostanou trému a zapomenou slova, ať už to jsou
+    herci, přednášející či zpěváci. Když přesvědčivě prezentujete vaše nápady,
+    vypadáte, že danému tematu rozumíte.<br/>
+    Tento strach lze velmi redukovat použitím jakékoliv předešle zmíněné metody.
+    Nepamatujte si slovo od slova, pouze výslednou strukturu. Vaše první a 
+    poslední slova by měli publikem hnout. Užijte gestikulace, demonstrace, citát,
+    fakt či otázku pro zaujmutí pozornosti. Prezentace se dá i rozvinout kolem
+    principu FLOOR:<br/>
+    <strong>
+    F - First things<br/>
+    L - Last things<br/>
+    O - Outstanding information<br/>
+    O - Own links<br/>
+    R - Repeated information<br/>
+    </strong>
+    Díky tomuto principu si vaše obecenstvo více z prezentace odnese, čímž učiní
+    váš přednes příjemnějším.
+</p>
+<h2>
+    6.3 Autopilot
+</h2>
+<p class="text-justify">
+    Pokud si nepamatujete, kde jste zaparkovali, jestli jste zapoměli zamknout nebo
+    dát psu vodu, jste úplně normální. Běžnost přináší zapomětlivost. Naše rutiny
+    občas vytvoří stav autopilota, kdy nevnímáme co děláme. V dnešním světě 
+    informačního ruchu často zapomínáme jména a myšlenky, překrývané jiným novým vjemem.<br/>
+    Jak proti tomu bojovat? 
+</p>
+<p class="text-justify">
+    Když položíte nějaký důležitý předmět, zeptejte se sami sebe, kdy je znovu použiju,
+    nebo okomentujte svoji činnost ("Pokládám klíče od auta na botník..."), popřípadě
+    použijte nějakou potrhlinu jako že se vám ty klíče propadnou skrz polici až do bot.
+</p>
+<h2>
+    6.4 Balíček karet
+</h2>
+<p class="text-justify">
+</p>
     </div>
 
 
