--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -906,6 +906,114 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     6.4 Balíček karet
 </h2>
 <p class="text-justify">
+    Problém zapamatování si balíčku karet se v zásadě omezuje na seznam položek,
+    kde se každá opakuje právě jednou. Proto je nutno karty nahradit něčím zapamatovatelným.
+    Kříže, Pika, Srdce, Kára. Máme problém, dvě kategorie začínají na K. Kára přejmenujeme
+    na Diamanty, z hlediska angličtiny a tvaru by to neměl být problém.
+</p>
+<p class="text-justify">
+    Následně užijme nahrazení čísel písmeny z předcházejících kapitol. Eso-1, 2-2, ....
+    10-10, Kluk - reprezentuje barvu, Dáma - vytvořte rým, král - reprezentuje hodnoty. 
+    Všechny karty budou začínat počátečním písmenem jejich barvy, tedy Srdce S atd.
+</p>
+<p class="text-justify">
+    Nahlédněme například na Piky:<br/>
+    <strong>
+    Eso - Pedo<br/>
+    2   - Panel<br/>
+    3   - Paměť<br/>
+    4   - Pára<br/>
+    5   - Pajzl<br/>
+    6   - Pačes<br/>
+    7   - Pako<br/>
+    8   - Páv<br/>
+    9   - Pablb<br/>
+    10  - Pas<br/>
+    Kluk- malý snědý tlusťoch<br/>
+    Dáma- Panama<br/>
+    Král- Peníze<br/>
+    </strong>
+</p>
+<p class="text-justify">
+    Toto zopakujete pro všechny barvy, spojíte principem SEE, a jdete si zapamatovat balíček.
+    Spojujte jednotlivé karty tak jak jdou za sebou do příběhu. Není to nějaká supermetoda,
+    je třeba trénovat, ovšem je to mnohonásobně jednodušší než si pamatovat karty číslo od
+    čísla.
+</p>
+<h2>
+    6.5 Studium
+</h2>
+<blockquote><p>
+    If you choose to believe in limits you will live a limited life.
+</p></blockquote>
+<p class="text-justify">
+    Zaprvé, k čemu vám je tzv. "šprtání" aneb naučení se učiva jen aby jste jej po 
+    zkoušce za dva týdny opět neuměli? Učte se v rámci delšího časového úseku.
+    Použijte nejlépe princip PIC. Pouze vy ovlivňujete, kolik času a práce si dáte
+    na učení daného tematu.
+</p>
+<p class="text-justify">
+    Dělejte si pauzy! Vaše mysl má svůj koncentrační limit, jakmile jej překročíte
+    vaše efektivita učení jde do háje. Mě se osvědčilo 20 minut plné koncentrace
+    bez rozptýlení, následované 5 minutami "volna". Zacvičím si, zajdu si pro pití, 
+    na záchod, odepíšu pokud mám komu. Pro tento systém je důležitý časovač. V pěti
+    minutách "volna" ovšem dělejte jinou aktivitu než kterou děláte 20 minut předtím!
+    Vstaňte, projděte se, nechte vaši mysl odpočinout. Ocení to ;)
+</p>
+<p class="text-justify">
+    Udělejte si souhrn, vyznačte věci, které si musíte zapamatovat. Použijte metodu,
+    jež bude dané oblasti nejvíce vyhovovat. Projděte si vlastní systém vícekrát,
+    neočekávejte, že vše budete vědět hned po prvním přečtení. Jedinou překážkou
+    jsme my samotní, když nejsme schopni se přinutit ke snaze.
+</p>
+<h1 id="sec7">
+    7. Sebedisciplína
+</h1>
+<p class="text-justify">
+    Neexistuje světový šampión bez disciplíny. Lidé si myslí, že jim vše magicky 
+    spadne do náručí a dávají otázku své budoucnosti v šanc náhodě. Myslí si, že 
+    budoucnost bude lepším místem než dnešek, aniž by vykonali cokoliv pro to, aby
+    se jejich vize vyplnila. Pokud se nepohybujeme směrem kterým chceme, nikdy se
+    nedostaneme tam, kde jsme se chtěli dostat.
+</p>
+<h2>
+    Vytvořte si vizi
+</h2>
+<p class="text-justify">
+    Vaše energie a vnitřní vize jsou propojeny. Když se probudíte a začnete přemýšlet
+    nad všemi špatnými věcmi, co se vám mohou ten den stát, budete otrávení a vaše
+    energie nízká. Naopak, pokud se zamyslíte nad všemi úžasnými věcmi co se v našich
+    životech denně odehrávají, vaše energie vzroste. Where your attention goes, 
+    your energy flows.
+</p>
+<p class="text-justify">
+    Disciplína záleží na tom co a jak moc chceme. Čím více důvodů si najdeme něco dělat,
+    tím více do této aktivity vložíme více vytvořené energie. Pokud máme výmluv více než
+    motivů, nemáme dostatek disciplíny na to začít. Ptejte se sami sebe: "Jak moc to chci?"
+    Pokud to opravdu chcete, vytvoříte si silnou vizi a budete mít sebedisciplínu na 
+    to to udělat.
+</p>
+<h2>
+    Učiňte rozhodnutí
+</h2>
+<p class="text-justify">
+    Změna nastane pouze tehdy, pokud učiníte opravdové rozhodnutí se změnit.
+    Pokud se opravdu rozhodnete, nebudete mít výčitky že jste se rozhodli. Udělejte
+    si vůči sobě závazek, že toto je ta cesta, kterou se chcete vydat. Pro dlouhodobou
+    změnu musíte své činnosti zařadit do vaší denní rutiny.
+</p>
+<h2>
+    Neposlouchejte své emoce
+</h2>
+<p class="text-justify">
+    Sebedisciplína je umění dokopat se k tomu, co byste měli dělat a nezáleží
+    na tom, zda-li se vám to líbí nebo ne. Lidé jsou uvězněni v kruhu dostatku
+    času a odkládání. To samé platí pro "necítím se dneska na to". My však dokážeme
+    tyto pohnutky ovládat. Sebereflexe je v tomto ohledu klíčová a nutná.
+</p>
+<p class="text-justify">
+    Neposlouchejte svou intuici a emoce týkají se vaší práce. Čím více jsme nerozhodní
+    tím menší je pravděpodobnost, že budeme jednat.
 </p>
     </div>
 
