--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -1015,6 +1015,76 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     Neposlouchejte svou intuici a emoce týkají se vaší práce. Čím více jsme nerozhodní
     tím menší je pravděpodobnost, že budeme jednat.
 </p>
+<h2>
+    Jednejte každý den
+</h2>
+<p class="text-justify">
+    Rozhodnete se něco změnit a začleníte to do své denní rutiny. Je velmi důležité
+    se každý den motivovat pro danou činnost, váš mozek se nezautomatizuje po nějaké
+    uplynulé době. Každý den je dnem novým, nemyslete na budoucnost, důležité je teď.
+    Život neodměňuje nečinnost, pouze akci. Trénujte, zlepšujte se.
+</p>
+<h1 id="sec8">
+    Pro oživení opakujte!
+</h1>
+<p class="text-justify">
+    Jak moc zapomíname? Podívejme se na následující seznam:<br/>
+    Po 1 dni:       54%<br/>
+    Po 7 dnech:     35%<br/>
+    Po 14 dnech:    21%<br/>
+    Po 21 dnech:    19%<br/>
+    Po 28 dnech:    18%<br/>
+    <br/>
+    Normální student tedy si tedy pamatuje pouze 18% znalostí z předešlého roku,
+    na kterých se v následujícím školním roku může stavět. 82% usílí věnovanému
+    učení je ztráta času, pokud si znalosti neoživujeme. Pokud používáte metody,
+    jež jsme v tomto článku probrali, vězte, že vám s tímto problémem nepomůžou.
+    Je prostě nutné věnovat se procesu opakování.
+</p>
+<p class="text-justify">
+    Jak jistě uznáte, opakování je nuda, zdržovačka, a zná se jako špatně využitý
+    čas. Je třeba jej ozvláštnit a zefektivnit. Tím, že používáme metody, děláme
+    z toho hru spíše než nezáživnou činnost. Stačí se pouze zamyslet nad tím co
+    jsme si zapamatovali, a díky SEE je to záživnější.
+</p>
+<p class="text-justify">
+    Pokud se naučíte věci i pozpátku či v liboblně spřeházené řadě, vyše myšlenky
+    budou více ukotvené, nepotřebujete vědět první věc, aby jste navázali na další.
+    Teď takový malý tahák pro opakování.
+</p>
+<p class="text-justify">
+    Po 10 minutách pozpátku, po 1 hodině, po 1 dni, po 3 dnech, 7 dnech, 14 dnech,
+    21 dnech, 28 dnech, 2 měsících, 3 měsících, následně by to mělo být ve vaší
+    paměti nadobro. Pokud používáte systém cesty či domu, po 72hodinách jej můžete
+    použít znovu na něco jiného.
+</p>
+<p class="text-justify">
+    Chce to disciplínu, né že ne. Máte kalendáře s upomínkami? Měli by ste. Při každém
+    opakování si zapište termín dalšího opakování. Opakováním osvěžujte vložené
+    informace a dáváte jim příležitost se provázat s těmi již uloženými. Čím více
+    se propojí, tím lépe se bude pamatovat.
+</p>
+<p class="text-justify">
+    Skvělé je, pokud jsou jednotlivé bloky informací samostatné celky s velmi
+    výraznými informacemi, které jsou provázané s dalšími bloky. Nezapomeňte, že 
+    nezáleží na tom kolikrát si něco přečtete a projdete, jakmile si dovolíte
+    zapomenout dané informace, začínáte od znovu. Musíte si svá opakování rozvrhnout
+    na delší a delší časové úseky. Pokud si své informace osvěžíte, zapamatujete
+    si je. Pokud opakovaně používáte nabyté informace, jenom dobře, otevíráte bloky
+    a provazujete je s aktuální činností.
+</p>
+<h1 id="sec9">
+    9. Souhrn
+</h1>
+<p class="text-justify">
+    Naučili jsme se, že jediná možnost jak se zlepšit je zbavit se všeho, co vám
+    v tomto zlepšení brání. Zbavili jsme se zábra vaší mysli jako výmluv, 
+    omezujících přesvědčení, multitaskingu a naučili jsme mít k učení pozitivní
+    přístup. Nejdůležitějším motivem tohoto článku je motiv SEE, princip 
+    představivosti. Dále jsme se naučili metody s ním související, a to metodu 
+    příběhu, metodu umění, metodu těla a metodu cesty a místa, systém rýmování,
+    převod čísel. Tyto metody jsou omezené pouze 
+</p>
     </div>
 
 
