--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -1083,7 +1083,7 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     přístup. Nejdůležitějším motivem tohoto článku je motiv SEE, princip 
     představivosti. Dále jsme se naučili metody s ním související, a to metodu 
     příběhu, metodu umění, metodu těla a metodu cesty a místa, systém rýmování,
-    převod čísel. Tyto metody jsou omezené pouze 
+    převod čísel. Tyto metody jsou omezené pouze našimi myslemi.
 </p>
     </div>
 
