--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -1083,7 +1083,12 @@ Vřele doporučuji shlédnout toto <a href="https://www.youtube.com/watch?v=ktlT
     přístup. Nejdůležitějším motivem tohoto článku je motiv SEE, princip 
     představivosti. Dále jsme se naučili metody s ním související, a to metodu 
     příběhu, metodu umění, metodu těla a metodu cesty a místa, systém rýmování,
-    převod čísel. Tyto metody jsou omezené pouze našimi myslemi.
+    převod čísel. Tyto metody jsou omezeny pouze naší myslí.
+</p>
+<p class="text-justify">
+    Doufám, že jste si alespoň něco odnesli z mého prvního článku. Omlouvám se
+    zpověď v prvních odstavcích, článek má rezervy a já si je uvědomuji. Jakmile
+    budu opakovat dané informace, článek přepíši.
 </p>
     </div>
 
