UM adding mindmap

--- a/app/templates/articles/unlimitedmemory.html
+++ b/app/templates/articles/unlimitedmemory.html
@@ -28,6 +28,12 @@
     Mindmap of Unlimited memory:
 </p>
 <p>
+    <img
+        class="img-responsive center-block img-rounded"
+        src="static/img/UMsystems.png"
+    />
+</p>
+<p>
     <strong>WHY</strong>
     <br/>
     <p class="text-justify">
