--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,8 +46,8 @@
                           <li><a href="#">Úvodem</a></li>
                           <li class="divider"></li>
                           <li><a href="/unlimitedmemory">Unlimited memory</a></li>
-                          <li><a href="#">Fyzika</a></li>
-                          <li><a href="#">Materiály</a></li>
+                          <li><a href="/advancedprocrastinationhacks">Advanced procrastination hacks</a></li>
+                          <li><a href="/artofbanter">Art of Banter</a></li>
                           <li class="divider"></li>
                           <li><a href="#">Doporučené věci</a></li>
                         </ul>
