--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -94,7 +94,7 @@
 				<div class="col-md-2">
 				</div>
 				<div class="col-md-10">
-					<img src="static/img/APH/text1.jpg" class="img-rounded">
+					<img src="static/img/APH/text1.jpg" class="img-rounded img-responsive">
 				</div>
 			</div>
 		</div>
@@ -116,7 +116,7 @@
 		<div class="col-md-6">
 			<div class="row">
 				<div class="col-md-10">
-					<img src="static/img/APH/text2.jpg" class="img-rounded">
+					<img src="static/img/APH/text2.jpg" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-2">
 				</div>
@@ -189,21 +189,21 @@
 				<div class="col-md-2">
 				</div>
 				<div class="col-md-10">
-					<img src="static/img/APH/text3.jpg" class="img-rounded">
+					<img src="static/img/APH/text3.jpg" class="img-rounded img-responsive">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-2">
 				</div>
 				<div class="col-md-10">
-					<img src="static/img/APH/text4.jpg" class="img-rounded">
+					<img src="static/img/APH/text4.jpg" class="img-rounded img-responsive">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-2">
 				</div>
 				<div class="col-md-10">
-					<img src="static/img/APH/text5.jpg" class="img-rounded">
+					<img src="static/img/APH/text5.jpg" class="img-rounded img-responsive">
 				</div>
 			</div>
 		</div>
@@ -221,14 +221,14 @@
 		<div class="col-md-6">
 			<div class="row">
 				<div class="col-md-10">
-					<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/" class="img-rounded">
+					<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-2">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-10">
-					<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/" class="img-rounded">
+					<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/" class="img-rounded img-responsive">
 				</div>
 				<div class="col-md-2">
 				</div>
