--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -57,7 +57,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3>
-                    1. Proč inteligentí lidé prokrastinují
+                        Proč inteligentí lidé prokrastinují
                     </h3>
                     <p class="text-justify">
                     Ten kdo je neschopen předvídat jak těžká, únavná a naplňující bude jeho úloha, nikdy na prokrastinaci ani nepomyslel. 
@@ -66,7 +66,7 @@
                     Jaké je tedy řešení?
                     </p>
                     <h3>
-                        2. Návyk Následující Akce
+                        Návyk Následující Akce
                     </h3>
                     <p class="text-justify">
                     Nejjednodušší je asi omámit vlastní mysl. K tomu může být dobrý třeba alkohol, avšak mi si jen vezmeme tuto ideu a přeneseme ji na následující metodu.
@@ -88,8 +88,8 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<<h3>
-                    Setrvačnost: Fyzika a Produktivita
+					<h3>
+                        Setrvačnost: Fyzika a Produktivita
                     </h3>
                     <p class="text-justify">
                     "Těleso zůstává v klidu nebo rovnoměrném přímočarém pohybu, není-li nuceno vnějšími silami tento stav změnit." - Isaac Newton
@@ -113,101 +113,109 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h2>
-						Heading
-					</h2>
-					<p>
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-					</p>
-					<p>
-						<a class="btn" href="#">View details »</a>
-					</p>
+					<h3>
+                        To-Do List: znovu a lépe
+                    </h3>
+                    <p class="text-justify">
+                    Většina úkolů, které si lidé píší do diářů dělá již automaticky vaší mysli peklo na zemi.
+                    Napíší si věci jako "Vyřídit daně" nebo "Měsíční zpráva". Jak učinit váš diář lahodným vaší mysli?
+                    Uvědomte si, že v úkolníčcích se vyskytují věci, které vás buď přitahují (posezení s přáteli) nebo odpuzují (formuláře, povinnosti). Úlohy učiníte zajímavějšími tak, že je přetvoříte na akční a rázné. Místo "Psát diplomku" si zapište "Napsat odstavec o ...". Přece musíte uznat, že druhá varianta je přívětivější.
+                    Eliminujte prokrastinaci soustředěním se pouze na malé úlohy, na vaši další akci. Učiňte je jednoduchými, snadnými a akčními. Opakujte a zjistíte, že získáte touženou setrvačnost.  
+                    </p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-11">
-							<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+							<img src="static/img/APH/text3.jpg" class="img-rounded img-responsive">
 						</div>
 						<div class="col-md-1">
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<h2>
-						Heading
-					</h2>
-					<p>
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-					</p>
-					<p>
-						<a class="btn" href="#">View details »</a>
-					</p>
+					<h3>
+                        5. Dvouminutové Pravidlo
+                    </h3>
+                    <p class="text-justify">
+                        V průběhu dní se často vyhýbáme malým úkonům, jako je například umýt nádobí, odpovídat na emaily, prát aj. Nejlépe na víkend se nám tyto věci nakupí a chce to hodně snahy všechno dohnat. Nikdo nechce strávit víkend praním a žehlením nasbíraného prádla za měsíc, a tedy zase prokrastinujeme.
+                        Tady nastupuje dvouminutové pravidlo. Pokud něco zvládnete za 2 minuty, udělejte to hned. Proti intuici si tímto aktem ušetříte spoustu času.
+                        Toto pravidlo se vztahuje i na návyky. Pokud se snažíte vytvořit nový návyk, ujistěte se, že z počátku nezabírá více jak 2 minuty. Jinak budete mít, hlavně z počátku, velký problém se k němu donutit, navíc pokud je vám nepříjemný.
+                        Jakmile budete používat toto pravidlo delší dobu, zjistíte, že stíháte. Úlohy se vám nebudou hromadit do dvouhodinových pracovních bloků, které si koledují o to, aby jste místo nich prokrastinovali.
+                        Pokud chcete jíst zdravě, vemte si ovoce a snězte jej, zabere to méně jak 2 minuty. Udělejte tak každý den a přistihnete se že nahrazujete sodu za vodu a k jídlu si uděláte jako přílohu salát, sladkosti nahradíte ovocem. Podobně pokud chcete si navyknout denně číst, přečtěte si první stranu knihy. V rámci setrvačnosti si ani neuvědomíte, že máte celou kapitolu za sebou. Co třeba běhání? Není problém. Nasaďte si běžecké boty a jděte před dveře - to by vám mělo zabrat méně jak 2 minuty - no a když už tam jste, setrvačností si dáte 20 minut běhu a ještě si přidáte 30 dřepů.
+                        Prokrastinace je téměř vždy vyřešena, když učiníte první krok. Největší překážkou je začít, tak proč si to nezjednodušit!?
+                        A journey of thousand miles must begin with a single step.
+                        Udělejte jeden klik, umyjte si jeden zub, snězte jedno jablko, napište prvních 5 slov článku. Jakmile začnete, jedno jak malá nebo nevýznamná akce se to zdála, "rozjedete" se. Jedna věc vede k druhé, nabudete setrvačnosti. Naschle prokrastinace. Ale ona se zase vrátí! Jakmile tak nastane, znovu užijte dvouminutové pravidlo, restartujte, jeďte znovu. V začátcích však toto berte s rezervou, mohli by jste dostat šok :D.
+                        Udělejte jeden krok. Ten první, nejdůležitější. To je to, na čem záleží.
+                    </p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-11">
-							<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+							<img src="static/img/APH/text4.jpg" class="img-rounded img-responsive">
 						</div>
 						<div class="col-md-1">
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<h2>
-						Heading
-					</h2>
-					<p>
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-					</p>
-					<p>
-						<a class="btn" href="#">View details »</a>
-					</p>
+					<h3>
+                        6. Velké Cíle a Malé Kvóty
+                    </h3>
+                    <p class="text-justify">
+                      Máte velké sny? Co pro ně děláte? Očekáváte, že jednou k nim sednete a splníte je?
+                        Lepším přístupem jsou velké cíle a malé kvóty. Ukážeme si to na příkladu spisovatele.
+                        Chcete být populárním spisovatelem, který vydá alespoň 2 úspěšné knihy ročně. Toto je váš cíl, zdánlivě strašlivý a neuskutečnitelný. Každý den však budete psát 30 minut rozdělenou na 15ti minutové úseky. S tímto přístupem dostane každých 15 minut motivující pocit úspěchu. Né za měsíce, kdy už bude mít konečně dopsáno. Malé indikátory úspěchu, které vedou k vašim cílům vás donutí dělat více a více. Opět získáte setrvačnost a budete mít větší šanci dokončit váš úkol.
+                        Zadruhé, tyto malé úspěchy vás budou popohánět a rychle se převedou do povědomí, že dneska jste byli šikovní a produktivní.
+                        Jedna z nejčastějších příčin prokrastinace je pocit, že je toho na vás moc, že jste zavaleni vaším úkolem. Neznamená to však, že bychom neměli mít velké sny nebo úkoly představující výzvu. Každý z vás si najděte mezi své malé kvóty, jež vede k velkému cíli.
+                        Pokud se jedná o velké projekty, toto je nejlepší přístup ukázat prokrastinaci záda.
+                    </p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<h2>
-						Heading
-					</h2>
-					<p>
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-					</p>
-					<p>
-						<a class="btn" href="#">View details »</a>
-					</p>
+					<h3>
+                        7. Časové Bloky
+                    </h3>
+                    <p class="text-justify">
+                    Pokud si přesně nenaplánujete aktivitu, prokrastinace se stává jednoduchou.
+                    Zaprvé, rozhodněte se, co konkrétně musíte udělat. (Aktivita typu dělat věci do školy je špatná)
+                    Zadruhé, vyčleňte si čas (adekvátně malý), místo a přemýšlejte jak přesně danou aktivitu budete dělat.
+                    Zatřetí, eliminujte vše ostatní. Mobil do režimu letadla, zablokujte určité stránky skrz aplikace, odstraňte rušivé elementy. Pokud můžete, odpojte internet, vypněte televizi. Během práce na počítači je nutkání k prokrastinaci obzvláště jednoduché. Jakmile se úkol zdá nudným či obtížným, prokrastinování je jen záložku vedle. Učiňte tuto možnost obtížnou.
+                    Pokud opravdu potřebujete používat internet, já osobně používám Go Fucking Work, díky kterému si zablokujete prokrastinující stránky, a dále Rescue Time zaznamenává dobu, kterou jste strávili na různých stránkách a v programech.
+                    Pointa je takováto: Abyste opravdu překonali prokrastinaci a něco dělali, musíte se opravdu k tomu zavázat. Vyberte si čas a místo, odstraňte rušivé elementy a nedejte si šanci dělat něco jiného než to co právě musíte.
+                    </p>
 				</div>
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-1">
 						</div>
 						<div class="col-md-11">
-							<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+							<img src="static/img/APH/text5.jpg" class="img-rounded img-responsive">
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
-					<h2>
-						Heading
-					</h2>
-					<p>
-						Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-					</p>
-					<p>
-						<a class="btn" href="#">View details »</a>
-					</p>
+					<h3>
+                        8. Metoda Zadek v Křesle
+                    </h3>
+                    <p class="text-justify">
+                         Obzvláště mezi spisovateli knih je tato 100 % efektivní anti-prokrastinační strategie populární. Spočívá v tom, že si vymezíte časový úsek pro práci a sednete si do křesla. Bez jakéhokoliv vyrušení, bez ničeho. Vše dáte pryč nebo vypnete, kromě toho, co máte dělat. Mohli by jste tam jen tak sedět a nedělat nic, avšak stejně nakonec začnete psát. Pak nastane setrvačnost a opět vás to přestane bavit. Chvíli nic neděláte a pak vám to nedá a zase začnete. Téměř vždy po konci vašeho časového úseku budete mít pár stránek napsaných.
+                        Nejste spisovateli? Nevadí. To že se zavážete k bloku nevyrušeného času pro práci na specifickém úkolu je jeden z nejefektivnějších anti-prokrastinačních prostředků.
+                        Podobný stav navodí i let letadlem. Jelikož vás nic neotravuje a nemáte se čím zabavit, a tak začnete pracovat. Tento stav si můžete imaginárně navodit při dovolené. Všechny vymoženosti vypněte, a nedejte si možnost dělat něco jiného než to, co máte.
+                    </p>
 				</div>
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-1">
 						</div>
 						<div class="col-md-11">
-							<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+							<img src="static/img/APH/text6.jpg" class="img-rounded img-responsive">
 						</div>
 					</div>
 				</div>
