--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -334,7 +334,7 @@
 						<div class="col-md-1">
 						</div>
 						<div class="col-md-11">
-							<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+							<img src="static/img/APH/text10.jpg" class="img-rounded img-responsive">
 						</div>
 					</div>
 				</div>
@@ -361,7 +361,7 @@
 								<div class="col-md-1">
 								</div>
 								<div class="col-md-11">
-									<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+									<img src="static/img/APH/text11.jpg" class="img-rounded img-responsive">
 								</div>
 							</div>
 						</div>
@@ -388,7 +388,7 @@
 								<div class="col-md-1">
 								</div>
 								<div class="col-md-11">
-									<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+									<img src="static/img/APH/text12.jpg" class="img-rounded img-responsive">
 								</div>
 							</div>
 						</div>
