--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -314,7 +314,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 ">
-					<iframe class="allign-middle" width="853" height="480" src="https://www.youtube.com/embed/arj7oStGLkU?rel=0" allowfullscreen align="middle"></iframe>
+					<iframe class="center-block" width="853" height="480" src="https://www.youtube.com/embed/arj7oStGLkU?rel=0" allowfullscreen=""></iframe>
 				</div>
 			</div>
 			<div class="row">
