--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -15,36 +15,27 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<img alt="Carousel Bootstrap First" src="http://lorempixel.com/output/sports-q-c-1600-500-1.jpg">
+						<img alt="Carousel Bootstrap First" src="static/img/APH/carousel1.jpg">
 						<div class="carousel-caption">
-							<h4>
-								First Thumbnail label
-							</h4>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+							<h2>
+								Zjistěte příčiny prokrastinace
+							</h2>
 						</div>
 					</div>
 					<div class="item">
-						<img alt="Carousel Bootstrap Second" src="http://lorempixel.com/output/sports-q-c-1600-500-2.jpg">
+						<img alt="Carousel Bootstrap Second" src="static/img/APH/carousel2.jpg">
 						<div class="carousel-caption">
-							<h4>
-								Second Thumbnail label
-							</h4>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+							<h2>
+                                Odhalte správné nástroje pro boj s prokrastinací
+                            </h2>
 						</div>
 					</div>
 					<div class="item">
-						<img alt="Carousel Bootstrap Third" src="http://lorempixel.com/output/sports-q-c-1600-500-3.jpg">
+						<img alt="Carousel Bootstrap Third" src="static/img/APH/carousel3.jpg">
 						<div class="carousel-caption">
-							<h4>
-								Third Thumbnail label
-							</h4>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+							<h2>
+                                Pracujte na svých snech
+                            </h2>
 						</div>
 					</div>
 				</div> <a class="left carousel-control" href="#carousel-753592" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-753592" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
