--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -17,25 +17,26 @@
 					<div class="item active">
 						<img alt="Carousel Bootstrap First" src="static/img/APH/carousel1.jpg">
 						<div class="carousel-caption">
-							<h2>
+							<h3 class="text-warning">
 								Zjistěte příčiny prokrastinace
-							</h2>
+							</h3>
 						</div>
 					</div>
 					<div class="item">
 						<img alt="Carousel Bootstrap Second" src="static/img/APH/carousel2.jpg">
 						<div class="carousel-caption">
-							<h2>
-                                Odhalte správné nástroje pro boj s prokrastinací
-                            </h2>
+							<h3 class="text-warning">
+                                Odhalte správné nástroje
+                                pro boj s prokrastinací
+                            </h3>
 						</div>
 					</div>
 					<div class="item">
 						<img alt="Carousel Bootstrap Third" src="static/img/APH/carousel3.jpg">
 						<div class="carousel-caption">
-							<h2>
+							<h3 class="text-warning">
                                 Pracujte na svých snech
-                            </h2>
+                            </h3>
 						</div>
 					</div>
 				</div> <a class="left carousel-control" href="#carousel-753592" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-753592" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
