--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -17,7 +17,7 @@
 					<div class="item active">
 						<img alt="Carousel Bootstrap First" src="static/img/APH/carousel1.jpg">
 						<div class="carousel-caption">
-							<h3 class="text-warning">
+							<h3 class="text-info">
 								Zjistěte příčiny prokrastinace
 							</h3>
 						</div>
@@ -25,7 +25,7 @@
 					<div class="item">
 						<img alt="Carousel Bootstrap Second" src="static/img/APH/carousel2.jpg">
 						<div class="carousel-caption">
-							<h3 class="text-warning">
+							<h3 class="text-muted">
                                 Odhalte správné nástroje
                                 pro boj s prokrastinací
                             </h3>
@@ -34,7 +34,7 @@
 					<div class="item">
 						<img alt="Carousel Bootstrap Third" src="static/img/APH/carousel3.jpg">
 						<div class="carousel-caption">
-							<h3 class="text-warning">
+							<h3>
                                 Pracujte na svých snech
                             </h3>
 						</div>
