--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -17,17 +17,17 @@
 					<div class="item active">
 						<img alt="Carousel Bootstrap First" src="static/img/APH/carousel1.jpg">
 						<div class="carousel-caption">
-							<h3 class="text-info">
-								Zjistěte příčiny prokrastinace
+							<h3 class="text-warning">
+								<strong>Zjistěte příčiny prokrastinace</strong>
 							</h3>
 						</div>
 					</div>
 					<div class="item">
 						<img alt="Carousel Bootstrap Second" src="static/img/APH/carousel2.jpg">
 						<div class="carousel-caption">
-							<h3 class="text-muted">
-                                Odhalte správné nástroje
-                                pro boj s prokrastinací
+							<h3 class="text-danger">
+                                <strong>Odhalte správné nástroje
+                                pro boj s prokrastinací</strong>
                             </h3>
 						</div>
 					</div>
@@ -35,7 +35,7 @@
 						<img alt="Carousel Bootstrap Third" src="static/img/APH/carousel3.jpg">
 						<div class="carousel-caption">
 							<h3>
-                                Pracujte na svých snech
+                                <strong>Pracujte na svých snech</strong>
                             </h3>
 						</div>
 					</div>
