--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -244,7 +244,8 @@
                     Jak to funguje: Sednete si, nastavíte časovač na 10 minut a pracujete bez rozptýlení dokud čas nevyprší. Během 10 minut dělejte jen zadanou práci, nic jiného. Je to přece jen 10 minut. Následně máte 2 minuty na to dělat co chcete (nejlépe vstaňte a změňte aktivitu). Přesně 2 minuty. Čas vypršel, připravte se na dalších 10 minut práce. Opakujte.
                     Co ale to *5? Měli by jste tento cyklus 5x opakovat, aby jste docílili 60 minut práce a krátkých přestávek.<br/>
                     Pointou je učinit prokrastinaci méně lákavou. Jenom 10 minut, jednoduché. Navíc tyto chaotické změny ve vás vyvolají to, že se budete těšit na pauzy i na práci!
-                    Postupem času budete pauzy přeskakovat protože vás budou vyrušovat při práci. Takže znovu. Začít, vybudovat setrvačnost, nechat se strhnout svou prací. Tato metoda je fajn v tom, že je právě jednoduché začít.
+                    Postupem času budete pauzy přeskakovat protože vás budou vyrušovat při práci. <br/>
+                    Takže znovu. Začít, vybudovat setrvačnost, nechat se strhnout svou prací. Tato metoda je fajn v tom, že je právě jednoduché začít.
                     </p>
 				</div>
 			</div>
