--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,12 +71,12 @@
                           <div class="fixed-section" >
                           <nav id="myScrollspy">
                             <ul class="nav nav-stacked nav-pills hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
-                              <li><a href="#sec0">test text</a></li>
-                              <li><a href="#sec1">Section 1</a></li>
-                              <li><a href="#sec2">Section 2</a></li>
-                              <li><a href="#sec3">Section 3</a></li>
-                              <li class="fixer"><a href="#sec-conclusion">Section 4</a></li>
-                            </ul>
+                              {% if headings %}
+                                {% for heading in headings %}
+                                <li><a href="#sec{{loop.index}}">Section {{loop.index}}</a></li>
+                                {% endfor %}
+                              {% endif %}
+                              </ul>
                           </nav>  
                           </div>
                       </div>
