--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,8 +60,6 @@
         </div>
     </nav>
     <div class="wrapper">
-        <div class="header header-filter" style="background-image: url('https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1450');">
-        </div>
         <div class="main main-raised">
             <div class="section">
                 <div class="container-fluid">
@@ -73,7 +71,7 @@
                             <ul class="nav nav-stacked nav-pills hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
                               {% if headings %}
                                 {% for heading in headings %}
-                                <li><a href="#sec{{loop.index}}">{{heading}} {{loop.index}}</a></li>
+                                <li><a href="#sec{{loop.index}}">{{heading}}</a></li>
                                 {% endfor %}
                               {% endif %}
                               </ul>
