--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,6 +60,10 @@
         </div>
     </nav>
     <div class="wrapper">
+        {% if title == maintitle%}
+        <div class="header header-filter" style="background-image: url('https://images.unsplash.com/photo-1423655156442-ccc11daa4e99?crop=entropy&dpr=2&fit=crop&fm=jpg&h=750&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1450');">
+        </div>
+        {% endif %}
         <div class="main main-raised">
             <div class="section">
                 <div class="container-fluid">
