--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,7 +72,7 @@
                       <div class="col-md-2">
                           <div class="fixed-section" >
                           <nav id="myScrollspy">
-                            <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
+                            <ul class="nav nav-justified hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
                               {% if headings %}
                                 {% for heading in headings %}
                                 <li><a href="#sec{{loop.index}}">{{heading}}</a></li>
