UM edit sidebar

--- a/app/templates/articles/headings.html
+++ b/app/templates/articles/headings.html
@@ -1,1 +1,1 @@
-['1. Koncentrace', '2. Základy', '3. Techniky', '4. Čísla', '5. Mind mapping', '6. Metody života', '7. Sebedisciplína', 'Pro oživení opakujte!', '9. Souhrn']
+['How to learn stuff', '1. Koncentrace', '2. Základy', '3. Techniky', '4. Čísla', '5. Mind mapping', '6. Metody života', '7. Sebedisciplína', 'Pro oživení opakujte!', '9. Souhrn']
