--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,6 +78,11 @@
                                 <li><a href="#sec{{loop.index}}">{{heading}}</a></li>
                                 {% endfor %}
                               {% endif %}
+                              {% if conclusions %}
+                                {% for conclusion in conclusions %}
+                                <li><a href="#sec-conclusion{{loop.index}}">{{conclusion}}</a></li>
+                                {% endfor %}
+                              {% endif %}
                               </ul>
                           </nav>  
                           </div>
