UM edit sidebar

--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -532,6 +532,15 @@
       <br/>
       Teď tedy zavřete záložku s mým blogem a začnete!
      </p>
+     <p id="sec-conclusion1">
+        Mindmap of Unlimited memory:
+    </p>
+    <p>
+        <img
+            class="img-responsive center-block img-rounded"
+            src="static/img/APH/APH-Mindmap.png"
+        />
+    </p>
     </div>
    </div>
   </div>
