preparing for contact form

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,7 +75,7 @@
                             <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
                               {% if headings %}
                                 {% for heading in headings %}
-                                <li><a href="#sec{{loop.index}}">{{heading}}</a></li>
+                                <li><a href="#sec{{loop.index}}"><h6>{{heading}}</h6></a></li>
                                 {% endfor %}
                               {% endif %}
                               {% if conclusions %}
