--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -1,5 +1,47 @@
 {% extends "base.html" %}
 {% block content %}
 
-<p>stock</p>
+<h2 style = "text-align: center;">Contact Form</h2>
+        
+      {% for error in form.name.errors %}
+         <div>{{ error }}</div>
+      {% endfor %}
+      
+      {% for error in form.email.errors %}
+         <div>{{ error }}</div>
+      {% endfor %}
+      
+      <form action = "http://localhost:5000/contact" method = post>
+         <fieldset>
+            <legend>Contact Form</legend>
+            {{ form.hidden_tag() }}
+            
+            <div style = font-size:20px; font-weight:bold; margin-left:150px;>
+               {{ form.name.label }}<br>
+               {{ form.name }}
+               <br>
+               
+               {{ form.Gender.label }} {{ form.Gender }}
+               {{ form.Address.label }}<br>
+               {{ form.Address }}
+               <br>
+               
+               {{ form.email.label }}<br>
+               {{ form.email }}
+               <br>
+               
+               {{ form.Age.label }}<br>
+               {{ form.Age }}
+               <br>
+               
+               {{ form.language.label }}<br>
+               {{ form.language }}
+               <br>
+               {{ form.submit }}
+            </div>
+            
+         </fieldset>
+      </form>
+
+
 {% endblock %}
