preparing for contact form

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,7 +70,7 @@
                     <div class="row-fluid">
                       <!--left-->
                       <div class="col-md-2">
-                          <div class="fixed-section" >
+                          <div class="fixed-section" style="overflow:scroll">
                           <nav id="myScrollspy">
                             <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
                               {% if headings %}
