--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="static/img/favicon.png">
-    <link rel="icon" type="image/png" href="static/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="static/img/logo.png">
+    <link rel="icon" type="image/png" href="static/img/logo.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>{{ title }}</title>
@@ -75,7 +75,7 @@
                             <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
                               {% if headings %}
                                 {% for heading in headings %}
-                                <li><a href="#sec{{loop.index}}"><h6>{{heading}}</h6></a></li>
+                                <li><a href="#sec{{loop.index}}"><div style="text-transform:uppercase">{{heading}}</div></a></li>
                                 {% endfor %}
                               {% endif %}
                               {% if conclusions %}
