--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -11,9 +11,7 @@
          <div>{{ error }}</div>
       {% endfor %}
       
-      <form action = "http://localhost:5000/contact" method = post>
-         <fieldset>
-            <legend>Contact Form</legend>
+      <form action = ""mailto:kulichusik@seznam.cz"" method = "post">
             {{ form.hidden_tag() }}
             
             <div style = font-size:20px; font-weight:bold; margin-left:150px;>
@@ -21,26 +19,14 @@
                {{ form.name }}
                <br>
                
-               {{ form.Gender.label }} {{ form.Gender }}
-               {{ form.Address.label }}<br>
-               {{ form.Address }}
-               <br>
+               {{ form.message.label }}<br>
+               {{ form.message }}
                
                {{ form.email.label }}<br>
                {{ form.email }}
                <br>
-               
-               {{ form.Age.label }}<br>
-               {{ form.Age }}
-               <br>
-               
-               {{ form.language.label }}<br>
-               {{ form.language }}
-               <br>
                {{ form.submit }}
             </div>
-            
-         </fieldset>
       </form>
 
 
