--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -11,7 +11,7 @@
          <div>{{ error }}</div>
       {% endfor %}
       
-      <form action = ""mailto:kulichusik@seznam.cz"" method = "post">
+      <form action = "mailto:kulichusik@seznam.cz" method = "post">
             {{ form.hidden_tag() }}
             
             <div style = font-size:20px; font-weight:bold; margin-left:150px;>
