--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
     
 </head>
 
-<body data-spy="scroll" data-target="#myScrollspy">
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
     <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -72,7 +72,7 @@
                       <div class="col-md-2">
                           <div class="fixed-section" style="overflow:auto">
                           <nav id="myScrollspy">
-                            <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="100">
+                            <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="10">
                               {% if headings %}
                                 {% for heading in headings %}
                                 <li><a href="#sec{{loop.index}}"><div class="uppercase">{{heading}}</div></a></li>
