--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-doc">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                 </button>
@@ -70,7 +70,7 @@
                     <div class="row-fluid">
                       <!--left-->
                       <div class="col-md-2">
-                          <div class="section" style="overflow:auto">
+                          <div class="section-fixed" style="overflow:auto">
                           <nav id="myScrollspy">
                             <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="10">
                               {% if headings %}
