--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,7 @@
                           <div class="section-fixed myScrollspy" style="overflow:auto">
                           <nav id="myScrollspy">
                             <ul class="nav nav-stacked hidden-xs hidden-sm" data-spy="affix" data-offset-top="10">
+                            <li><a href="#sec1"><div class="uppercase">1</div></a></li>
                               {% if headings %}
                                 {% for heading in headings %}
                                 <li><a href="#sec{{loop.index}}"><div class="uppercase">{{heading}}</div></a></li>
