--- a/app/templates/articles/blank_templates/changelog.html
+++ b/app/templates/articles/blank_templates/changelog.html
@@ -1,25 +1,37 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Bootstrap 3, from LayoutIt!</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+  </head>
+  <body>
 
     <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="jumbotron">
-                <h2>
-                    Welcome to news section!
-                </h2>
-                <p>
-                    This part of the blog currently serves as a changelog. Stay tuned for further updates.
-                </p>
-            </div>
-            <div class="panel-group" id="panel-79027">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                         <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-350064">Collapsible Group Item #1</a>
-                    </div>
-                    <div id="panel-element-350064" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div class="row">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="jumbotron">
+				<h2>
+					Welcome to news section!
+				</h2>
+				<p>
+					This part of the blog currently serves as a changelog. Stay tuned for further updates.
+				</p>
+			</div>
+			<div class="panel-group" id="panel-79027">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						 <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-350064">Collapsible Group Item #1</a>
+					</div>
+					<div id="panel-element-350064" class="panel-collapse collapse">
+						<div class="panel-body">
+							<div class="row">
                             <div class="col-md-5">
                                 <table class="table table-bordered">
                                     <thead>
@@ -146,22 +158,26 @@
                                 </dl>
                             </div>
                         </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                         <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-776885">Collapsible Group Item #2</a>
-                    </div>
-                    <div id="panel-element-776885" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            Anim pariatur cliche...
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+            		</div>
+            	    </div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						 <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-776885">Collapsible Group Item #2</a>
+					</div>
+					<div id="panel-element-776885" class="panel-collapse collapse">
+						<div class="panel-body">
+							Anim pariatur cliche...
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
-{% endblock %}
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+  </body>
+</html>
